--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,11 +9,17 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="sign-up">signup</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="sign">sign</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="manage-employees">manage employees</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="api-integration">api integration</a>
           </li>
           
           
