update the code

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,8 +21,16 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="api-integration">api integration</a>
           </li>
+
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="new-form">newForm</a>
+          </li>
           
           
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="crud">crud</a>
+          </li>
           
         </ul>
         <form class="d-flex" role="search">
