--- a/src/app/sign/sign.component.css
+++ b/src/app/sign/sign.component.css
@@ -1,6 +1,6 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
-.login-section{
+.login-section {
     /* background-color: #c1c1c1a3; */
     background-image: url('https://d33wubrfki0l68.cloudfront.net/8d79b89491cf9ef958be1386776dc937d39266be/1a630/img/particle_background.jpg');
     background-position: center;
@@ -10,27 +10,32 @@
     padding-bottom: 1em;
 }
 
-.login-section img{
+.login-section img {
     width: 100px;
     position: absolute;
     top: 20rem;
     left: 7rem;
-    animation: naved 1s infinite  alternate;
+    animation: naved 1s infinite alternate;
 }
 
 @keyframes naved {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-90px); }
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(-90px);
+    }
 }
 
-.login-div{
+.login-div {
     background-color: white;
     margin: 0 20rem;
     padding: 40px 43px;
     border-radius: 12px;
 }
 
-.playcart{
+.playcart {
     margin-bottom: 3em;
     display: flex;
     align-items: center;
@@ -39,39 +44,40 @@
     font-size: 18px;
 }
 
-.playcart i{
+.playcart i {
     color: #00aaff;
 }
 
-.sign-in h5{
+.sign-in h5 {
     font-weight: 600;
 }
 
-.sign-in p{
+.sign-in p {
     font-size: 14px;
 }
 
-form input:focus{
+form input:focus {
     box-shadow: none;
 }
 
-form label{
+form label {
     font-weight: 600;
     font-size: 14px;
 }
 
-.login-button button{
+.login-button button {
     background-color: #00aaff;
     border: none;
     border-radius: 6px;
     padding: 10px 166px;
     color: white;
+    width: 100%;
 }
 
-.forgot p a{
+.forgot p a {
     text-decoration: none;
 }
 
-.account p a{
+.account p a {
     text-decoration: none;
 }
